// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Requests should call connect correctly 1`] = `
Object {
  "body": Object {
    "in": "the-in-id",
    "out": "the-out-id",
  },
  "headers": Object {
    "ogit/_type": "some-verb",
  },
  "type": "connect",
}
`;

exports[`Client Requests should call create (waitForIndex) correctly 1`] = `
Object {
  "body": Object {
    "some": "prop",
  },
  "headers": Object {
    "ogit/_type": "some-type",
    "waitForIndex": "true",
  },
  "type": "create",
}
`;

exports[`Client Requests should call create correctly 1`] = `
Object {
  "body": Object {
    "some": "prop",
  },
  "headers": Object {
    "ogit/_type": "some-type",
  },
  "type": "create",
}
`;

exports[`Client Requests should call delete (waitForIndex) correctly 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "ogit/_id": "some-id",
    "waitForIndex": "true",
  },
  "type": "delete",
}
`;

exports[`Client Requests should call delete correctly 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "ogit/_id": "some-id",
  },
  "type": "delete",
}
`;

exports[`Client Requests should call disconnect correctly 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "ogit/_id": "the-out-id$$some-verb$$the-in-id",
  },
  "type": "delete",
}
`;

exports[`Client Requests should call get correctly 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "ogit/_id": "some-id",
  },
  "type": "get",
}
`;

exports[`Client Requests should call gremlin correctly 1`] = `
Object {
  "body": Object {
    "query": "pow()",
    "root": "root-id",
  },
  "headers": Object {
    "type": "gremlin",
  },
  "type": "query",
}
`;

exports[`Client Requests should call ids correctly 1`] = `
Object {
  "body": Object {
    "query": "a,b,c",
  },
  "headers": Object {
    "type": "ids",
  },
  "type": "query",
}
`;

exports[`Client Requests should call info correctly 1`] = `
Object {
  "body": undefined,
  "headers": undefined,
  "type": "info",
}
`;

exports[`Client Requests should call lucene (basic) correctly 1`] = `
Object {
  "body": Object {
    "count": false,
    "limit": 50,
    "offset": 0,
    "query": "*:*",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call lucene (count) correctly 1`] = `
Object {
  "body": Object {
    "count": true,
    "limit": 50,
    "offset": 0,
    "query": "*:*",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call lucene (fields) correctly 1`] = `
Object {
  "body": Object {
    "count": false,
    "fields": "/field1,/field2",
    "limit": 50,
    "offset": 0,
    "query": "*:*",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call lucene (limits) correctly 1`] = `
Object {
  "body": Object {
    "count": false,
    "limit": -1,
    "offset": 1000,
    "query": "*:*",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call lucene (order) correctly 1`] = `
Object {
  "body": Object {
    "count": false,
    "limit": 50,
    "offset": 0,
    "order": "/field1 asc,/field2 desc",
    "query": "*:*",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call lucene (placeholders) correctly 1`] = `
Object {
  "body": Object {
    "bar": "123",
    "count": false,
    "limit": 50,
    "offset": 0,
    "query": "/foo:$bar",
  },
  "headers": Object {
    "type": "vertices",
  },
  "type": "query",
}
`;

exports[`Client Requests should call me correctly 1`] = `
Object {
  "body": Object {},
  "headers": Object {},
  "type": "me",
}
`;

exports[`Client Requests should call replace (createIfNotExists) correctly 1`] = `
Object {
  "body": Object {
    "/foo": "bar",
  },
  "headers": Object {
    "createIfNotExists": "true",
    "ogit/_id": "some-id",
    "ogit/_type": "some-type",
  },
  "type": "replace",
}
`;

exports[`Client Requests should call replace (waitForIndex) correctly 1`] = `
Object {
  "body": Object {
    "/foo": "bar",
  },
  "headers": Object {
    "ogit/_id": "some-id",
    "waitForIndex": "true",
  },
  "type": "replace",
}
`;

exports[`Client Requests should call replace correctly 1`] = `
Object {
  "body": Object {
    "/foo": "bar",
  },
  "headers": Object {
    "ogit/_id": "some-id",
  },
  "type": "replace",
}
`;

exports[`Client Requests should call update (waitForIndex) correctly 1`] = `
Object {
  "body": Object {
    "/foo": "bar",
  },
  "headers": Object {
    "ogit/_id": "some-id",
    "waitForIndex": "true",
  },
  "type": "update",
}
`;

exports[`Client Requests should call update correctly 1`] = `
Object {
  "body": Object {
    "/foo": "bar",
  },
  "headers": Object {
    "ogit/_id": "some-id",
  },
  "type": "update",
}
`;
